Logtalk/examples/errors/unknowndir.lgt

:- object(unknowndir).


	:- index(predicate/3, [1, 2]).


:- end_object.
